# transitive-dependency

./: CMakeLists.txt  readme.md
src/: a.cpp  a.h  b.cpp  b.h  c.cpp  export.h
